--- a/html/error405.html
+++ b/html/error405.html
@@ -27,6 +27,7 @@
         <p>Request method was not supported for resource.</p>
         <p>If needed, please open an issue at the Github repository (will require an account), or email skynetserver.god@protonmail.com.</p>
         <a class = "button" href = "/index.html">Return Home</a> <a class = "button" style = "color: orange;" href= "https://github.com/perpetualCreations/dreamerslegacy-site/issues/new" target="_blank">Open Issue</a>
-        <p class = "footer-text" style = "color: black;padding-top: 50px;">dreamer's legacy, 2020-2021</p>
+        <p class = "footer-text" id = "year-footer-text" style = "color: black;padding-top: 50px;"></p>
+        <script src = "/js/auto-fill-year.min.js"></script>
     </body>
 </html>
