--- a/index.html
+++ b/index.html
@@ -13,8 +13,6 @@
         <link rel="preload" href="/projects/abl/icon-upscaled.png" as="image">
         <link rel="preload" href="/projects/swbs/icon-upscaled.png" as="image">
         <link rel="preload" href="/projects/op3dt/op3dt-icon.png" as="image">
-        <link rel="preload" href="/projects/internetofshit/internetofshit-icon.png" as="image">
-        <link rel="preload" href="/projects/aquasilva/as.png" as="image">
         <link rel="icon" href="/resources/homeIcon-favicon.ico">
         <link rel="stylesheet" type="text/css" href="/css/main.css">
         <style>
@@ -105,7 +103,8 @@
                     <hr>
                     <button class = "collapsible">Project Status</button>
                     <div class = "content">
-                        <p>Project was completed and released. See Project Contents for documentation and product.</p>
+                        <p>Project was completed and released.</p> 
+                        <p>See Project Contents for documentation and product.</p>
                     </div>
                     <hr>
                     <button class = "collapsible">Project Notes</button>
@@ -132,7 +131,8 @@
                     <hr>
                     <button class = "collapsible">Project Status</button>
                     <div class = "content">
-                        <p>Project was completed and released. See Project Contents for documentation and product.</p>
+                        <p>Project was completed and released.</p> 
+                        <p>See Project Contents for documentation and product.</p>
                     </div>
                     <hr>
                     <button class = "collapsible">Project Notes</button>
@@ -162,7 +162,7 @@
                     <button class = "collapsible">Project Status</button>
                     <div class = "content">
                         <p>Project is still in software development.</p>
-                        <p>Currently working on page integration, building entry pages and document viewer. SQLite integration will follow, for managing the document database.</p>
+                        <p>Currently working on page integration, building entry pages, document viewer, and SQLite module for managing the document database.</p>
                     </div>
                     <hr>
                     <button class = "collapsible">Project Contents</button>
@@ -191,7 +191,7 @@
                     <hr>
                     <button class = "collapsible">Project Contents</button>
                     <div class = "content">
-                        <p>Project software is available on GIthub, please see documentation for more details on usage.</p>
+                        <p>Project software is available on Github, please see documentation for more details on usage. Access these pages below.</p>
                         <a class = "button" href = "https://github.com/perpetualCreations/SCHEMA" target = "_blank" style = "margin-top:10px; margin-bottom: 10px;">Github</a>
                     </div>
                     <hr>
@@ -205,13 +205,13 @@
                     <hr>
                     <button class = "collapsible">Project Status</button>
                     <div class = "content">
-                        <p>Project was compeleted and released. See Project Contents for documentation and product.</p>
+                        <p>Project was compeleted and released.</p>
+                        <p>See Project Contents for documentation and product.</p>
                     </div>
                     <hr>
                     <button class = "collapsible">Project Contents</button>
                     <div class = "content">
-                        <p>Install through a Debian package, a directory will be created in your webroot for temporary files.</p>
-                        <p>Project software is available on Github, please see documentation for more details on usage and installation.</p>
+                        <p>Project software is available on Github, please see documentation for more details on usage and installation. Access these pages below.</p>
                         <a class = "button" href = "https://github.com/perpetualCreations/deargodpleaseno" target = "_blank" style = "margin-top:10px">Github</a>
                         <a class = "button" href = "/projects/dgpn/docs.html" style = "margin-top: 10px; margin-bottom: 10px;">Documentation</a>
                     </div>
@@ -229,7 +229,8 @@
                     <hr>
                     <button class = "collapsible">Project Status</button>
                     <div class = "content">
-                        <p>Project was completed and released. See Project Contents for documentation and product.</p>
+                        <p>Project was completed and released. </p>
+                        <p>See Project Contents for documentation and product.</p>
                     </div>
                     <hr>
                     <button class = "collapsible">Project Notes</button>
@@ -249,8 +250,10 @@
             </div>
         </div>
         <!-- Hey tired, depressed web dev! (future me), if you're looking for a bunch of commented out markup, it was removed. Look through Git VCS before commit dce8be5. Best of luck! -->
-        <p class= "footer-text">dreamer's legacy, 2020-2021, 3 abandoned projects hidden</p>
+        <p class = "footer-text" id = "year-footer-text"></p>
+        <p class = "footer-text">3 abandoned projects hidden</p>
         <div class = "background" style = "background-image: url('/resources/background/20190823_164234.jpg');"></div>
         <script src = "/js/collapse.min.js"></script>
+        <script src = "/js/auto-fill-year.min.js"></script>
     </body>
 </html>
