--- a/projects/abl/docs.html
+++ b/projects/abl/docs.html
@@ -115,7 +115,8 @@
                 <p>If you any inquiries, please contact the project maintainer(s).</p>
             </div>
         </div>
-        <p class = "footer-text">dreamer's legacy, 2020-2021</p>
+        <p class = "footer-text" id = "year-footer-text"></p>
+        <script src = "/js/auto-fill-year.min.js"></script>
         <script src = "/js/collapse.min.js"></script>
     </body>
 </html>
