--- a/projects/swbs/docs.html
+++ b/projects/swbs/docs.html
@@ -160,6 +160,7 @@
                 <p>This project was built off of the <span class = "code-quote">comms</span> module of the Raspbot project's control application.</p>
             </div>
         </div>
-        <p class = "footer-text">dreamer's legacy, 2020-2021</p>
+        <p class = "footer-text" id = "year-footer-text"></p>
+        <script src = "/js/auto-fill-year.min.js"></script>
     </body>
 </html>
