--- a/html/about.html
+++ b/html/about.html
@@ -74,8 +74,9 @@
                 </div>
             </div>
         </div>
-        <p class= "footer-text">dreamer's legacy, 2020-2021</p>
+        <p class = "footer-text" id = "year-footer-text"></p>
         <div class = "background" style = "background-image: url('/resources/background/20190823_162616_HDR.jpg');"></div>
         <script src = "/js/about-random.min.js"></script>
+        <script src = "/js/auto-fill-year.min.js"></script>
     </body>
 </html>
