--- a/html/error418.html
+++ b/html/error418.html
@@ -24,9 +24,10 @@
         <h1 style = "text-align: left;">// Error 418</h1>
         <h3><i>Client-Side Issue, I'm a teapot</i></h3>
         <hr>
-        <p>Not actually bound to the server config as a valid error page. April fools.</p>
+        <p>Not actually bound to the server config as a valid error page. April Fools, to an old joke that probably will never come back.</p>
         <p>If needed, please open an issue at the Github repository (will require an account), or email skynetserver.god@protonmail.com.</p>
         <a class = "button" href = "/index.html">Return Home</a> <a class = "button" style = "color: orange;" href= "https://github.com/perpetualCreations/dreamerslegacy-site/issues/new" target="_blank">Open Issue</a>
-        <p class = "footer-text" style = "color: black;padding-top: 50px;">dreamer's legacy, 2020-2021</p>
+        <p class = "footer-text" id = "year-footer-text" style = "color: black;padding-top: 50px;"></p>
+        <script src = "/js/auto-fill-year.min.js"></script>
     </body>
 </html>
