--- a/html/siteblog.html
+++ b/html/siteblog.html
@@ -82,6 +82,16 @@
             </div>
             <div class = "leftcolumn">
                 <div class = "card">
+                    <h2>Update 1.11c</h2>
+                    <p>Project Update, December 30th, 2020</p>
+                    <h3>Raspbot</h3>
+                    <p>Fixed breakage and ran extensive testing. Motors and the power control MOSFET for the motors work fine, however voltage regulator failed to deliver 5V, instead producing 4.8V.</p> 
+                    <p>Although this is within the given specifications by the manufacturer, 4.8V being the minimum voltage output, this was insufficient power for the Raspberry Pi.</p>
+                    <p>A step-down board based around the LM2596 will replace the current L7805CV IC.</p>
+                    <h3>Lexicon Cognito</h3>
+                    <p>Writing search UI elements, implemented database management.</p>
+                </div>
+                <div class = "card">
                     <h2>Update 1.11b</h2>
                     <p>Project Update + Site Update, December 29th, 2020</p>
                     <h3>Raspbot</h3>
