--- a/html/siteblog.html
+++ b/html/siteblog.html
@@ -82,6 +82,15 @@
             </div>
             <div class = "leftcolumn">
                 <div class = "card">
+                    <h2>Update 1.11d</h2>
+                    <p>Project Update, January 3rd, 2021</p>
+                    <p>Happy new year.</p>
+                    <h3>Raspbot</h3>
+                    <p>Stepdown board arrived! Rewiring and testing, currently adjusting potentiometer to adjust output voltage.</p> 
+                    <h3>Lexicon Cognito</h3>
+                    <p>Planned content viewer, building search template and completed URL building for search pages.</p>
+                </div>
+                <div class = "card">
                     <h2>Update 1.11c</h2>
                     <p>Project Update, December 30th, 2020</p>
                     <h3>Raspbot</h3>
