--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
                     <hr>
                     <button class = "collapsible">Project Status</button>
                     <div class = "content">
-                        <p>Both hardware and software development are active, with production of Raspbot RCA and specialized hardware modules.</p>
+                        <p>Project hardware and control software are still in progress.</p>
                         <p>Released CAD assets are outdated, revision 2 will be released later once fully tested.</p>
-                        <p>Currently, the new power system is being tested.</p>
+                        <p>Currently in re-assembly and integration testing.</p>
                     </div>
                     <hr>
                     <button class = "collapsible">Project Contents</button>
