--- a/html/siteblog.html
+++ b/html/siteblog.html
@@ -82,6 +82,14 @@
             </div>
             <div class = "leftcolumn">
                 <div class = "card">
+                    <h2>Update 1.11f</h2>
+                    <p>Project Update, January 4th, 2021</p>
+                    <h3>Raspbot</h3>
+                    <p>Reassembled, after several hours of cable management and difficult-to-reach screws.</p>
+                    <p>Currently writing a test script for motor control.</p>
+                    <p>Project gallery has been updated, visit homepage, under Raspbot see Project Contents and below Gallery.</p>
+                </div>
+                <div class = "card">
                     <h2>Update 1.11e</h2>
                     <p>Project Update, January 4th, 2021</p>
                     <h3>Raspbot</h3>
