--- a/html/siteblog.html
+++ b/html/siteblog.html
@@ -81,6 +81,16 @@
                 </div>
             </div>
             <div class = "leftcolumn">
+              <div class = "card">
+                    <h2>Update 1.11g</h2>
+                    <p>Project Update, January 5th, 2021</p>
+                    <h3>Raspbot</h3>
+                    <p>Reinstalled Raspbian and setup remote SSH.</p>
+                    <p>Motor control was a success, for turns, and moving forwards and backwards. It seems however the jump from 9 volts to 12 volts of motor power supply has caused it to move more uncontrollably due to sheer force at max acceleration.</p>
+                    <p>Project gallery has been updated with a video demo, visit homepage, under Raspbot see Project Contents and below Gallery.</p>
+                    <h3>Lexicon Cognito</h3>
+                    <p>Currently implementing uploads, tweaked search results page slightly.</p>
+                </div>
                 <div class = "card">
                     <h2>Update 1.11f</h2>
                     <p>Project Update, January 4th, 2021</p>
