--- a/projects/raspbot/gallery.html
+++ b/projects/raspbot/gallery.html
@@ -134,5 +134,15 @@
             </a>
             <div class="caption">Raspbot assembled, with the LED matrix less glaringly bright in the image, displaying the battery and zip-tied USB cable. (2021)</div>
         </div>
+        <div class="gallery">
+            <a target="_blank" href="/projects/raspbot/gallery/dev-2021-active-c.jpg">
+                <img src="/projects/raspbot/gallery/dev-2021-active-c.jpg">
+            </a>
+            <div class="caption">Another instance, fully up and running, now with the camera mounted firmly. (2021)</div>
+        </div>
+        <div class="gallery">
+            <video width = "180px;" controls><source src = "/projects/raspbot/gallery/demo-2021-a.mp4" type = "video/mp4"></video>
+            <div class = "caption">Motor control test demo. (2021)</div>
+        </div>
     </body>
 </html>
