--- a/html/siteblog.html
+++ b/html/siteblog.html
@@ -47,6 +47,8 @@
                                 ▌▓▄▌▀░▀░▐▀█▄▓▓██████████▓▓▓▌█▌
                 so style        ▌▓▓▓▄▄▀▀▓▓▓▀▓▓▓▓▓▓▓▓█▓█▓█▓▓▌█▌
                                 █▐▓▓▓▓▓▓▄▄▄▓▓▓▓▓▓█▓█▓█▓█▓▓▓▌█▌     
+        
+        buy my roblox script injector at: admalona.tk
         -->
         <div class = "topnav">
             <a href = "/index.html">Home</a>
@@ -81,6 +83,16 @@
                 </div>
             </div>
             <div class = "leftcolumn">
+              <div class = "card">
+                    <h2>Update 1.11h</h2>
+                    <p>Project Update, January 11th, 2021</p>
+                    <h3>Raspbot</h3>
+                    <p>Refactoring and debugging client application.</p>
+                    <p>OpenCV is failing to build, with cmake raising errors. Currently resolving dependencies before application testing can begin.</p>
+                    <p>Project gallery has been updated with screenshots of client application.</p>
+                    <h3>Lexicon Cognito</h3>
+                    <p>Divided upload process across multiple pages, for users to select authors, publishers, tags, and distributors. Writing pages and logic for endpoints.</p>
+                </div>
               <div class = "card">
                     <h2>Update 1.11g</h2>
                     <p>Project Update, January 5th, 2021</p>
