--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                 </div>
             </div>
         </div>
-        <!-- Hey tired, depressed web dev! (future me), if you're looking for a bunch of commented out markup, it was removed. Look through Git VCS before commit dce8be5. Best of luck! -->
+        <!-- Hey tired, depressed web dev! (future me), if you're looking for a bunch of commented out markup, it was removed. Look through Git VCS before commit dce8be5, on the old repo. Best of luck! -->
         <p class = "footer-text" id = "year-footer-text"></p>
         <p class = "footer-text">3 abandoned projects hidden</p>
         <div class = "background" style = "background-image: url('/resources/background/20190823_164234.jpg');"></div>
