--- a/projects/raspbot/docs.html
+++ b/projects/raspbot/docs.html
@@ -34,7 +34,7 @@
                 </div>
                 <h3>1.1: Introduction</h3>
                 <p>Raspbot is a small robotic vehicle, that is remotely operated via a local network, through a custom client application.</p>
-                <p>The onboard computer is powered by a Raspberry Pi 3 B+ running Raspbian. Additionally, it contains an Arduino microcontroller with a Grove Base Shield V2 (for Grove modules and sensors) and an Arduino Motor Shield Rev3 (for controlling the dual tank treads), eventually the project will ditch using Grove modules completely.</p>
+                <p>The onboard computer is powered by a Raspberry Pi 3 B+ running Raspbian. Additionally, it contains an Arduino microcontroller and an Arduino Motor Shield Rev3 (for controlling the dual tank treads).</p>
                 <h3>1.2: Hardware Specs</h3>
                 <button class = "collapsible" style = "text-align: center;">Click to Expand Specifications</button>
                 <div class = "content">
@@ -62,7 +62,7 @@
                     <h4>Over I2C</h4>
                     <p>VL53L0X Time of Flight Sensor</p>
                     <p>GP2Y1010AU0F Dust Sensor (if installed)</p>
-                    <h4>Over Grove Base Shield V2</h4>
+                    <h4>Grove Base Shield V2</h4>
                     <p>Grove Base Shield V2 has been discontinued from use.</p>
                     <h4>Power</h4>
                     <p>12 Volt Circuit</p>
@@ -87,13 +87,13 @@
                 <p>It's recommended to use a designated user account on the Debian or Debian-based system, and to extract release contents to the user's home directory.</p>
                 <p>In Raspbot RCA v1.1, credits to Pyimagesearch for the live view, please see /tkinter-photo-booth/tkinter-photo-booth-citation.txt for more information. Please note v1.2 and above this dependency has been removed.</p>
                 <h3>2.1: Hardware List + Build Directions</h3>
-                <p>Below is a list of hardware used, containg links to buy each of the hardware components, and also directions to assemble.. Documentation and downloads can be found on each of the manufacturer's website.</p>
+                <p>Below is a list of hardware used, containg links to buy each of the hardware components, and also directions to assemble. Documentation and downloads can be found on each of the manufacturer's website. Note hardware sets have been revised over the project's development.</p>
                 <p>The top case housing the electronics can be 3D printed, the CAD files are available in the project's download section.</p>
                 <button class = "collapsible">Dust Sensor Module (Created 10-3-2020, Updated 10-3-2020)</button>
                 <div class = "content">
                     <p>[Finished]</p>
                     <li>GP2Y1010AU0F Dust Sensor</li>
-                    <p>Please install dust sensor with 3D-printable mounting hardware, the CAD files are available for download.</p>
+                    <p>Please install dust sensor with 3D-printable mounting hardware, the CAD files will be available for download.</p>
                 </div>
                 <button class = "collapsible">Robotic Arm Kit (Created 1-21-2019, Updated 10-3-2020)</button>
                 <div class = "content">
