--- a/projects/raspbot/gallery.html
+++ b/projects/raspbot/gallery.html
@@ -144,5 +144,17 @@
             <video width = "180px;" controls><source src = "/projects/raspbot/gallery/demo-2021-a.mp4" type = "video/mp4"></video>
             <div class = "caption">Motor control test demo. (2021)</div>
         </div>
+        <div class="gallery">
+            <a target="_blank" href="/projects/raspbot/gallery/client-dev-a.png">
+                <img src="/projects/raspbot/gallery/client-dev-a.png">
+            </a>
+            <div class="caption">In-dev client. (2021)</div>
+        </div>
+        <div class="gallery">
+            <a target="_blank" href="/projects/raspbot/gallery/client-dev-b.png">
+                <img src="/projects/raspbot/gallery/client-dev-b.png">
+            </a>
+            <div class="caption">In-dev client, ping menu. (2021)</div>
+        </div>
     </body>
 </html>
