--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -8,7 +8,7 @@
         <meta name="author" content="perpetualCreations">
         <title>Home</title>
         <link rel="preload" href="/css/main.css" as="style">
-        <link rel="preload" href="/resources/background/20190823_164234.jpg" as="image">
+        <link rel="preload" href="/resources/background/20190823_164234.webp" as="image">
         <link rel="preload" href="/projects/raspbot/icon-upscaled.png" as="image">
         <link rel="preload" href="/projects/abl/icon-upscaled.png" as="image">
         <link rel="preload" href="/projects/swbs/icon-upscaled.png" as="image">
@@ -252,7 +252,7 @@
         <!-- Hey tired, depressed web dev! (future me), if you're looking for a bunch of commented out markup, it was removed. Look through Git VCS before commit dce8be5, on the old repo. Best of luck! -->
         <p class = "footer-text" id = "year-footer-text"></p>
         <p class = "footer-text">3 abandoned projects hidden</p>
-        <div class = "background" style = "background-image: url('/resources/background/20190823_164234.jpg');"></div>
+        <div class = "background" style = "background-image: url('/resources/background/20190823_164234.webp');"></div>
         <script src = "/js/collapse.min.js"></script>
         <script src = "/js/auto-fill-year.min.js"></script>
     </body>
