--- a/projects/raspbot/gallery.html
+++ b/projects/raspbot/gallery.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -67,12 +67,6 @@
                 <img src="/projects/raspbot/gallery/academic-demo-day.jpg" alt="Raspbot and another bot at an academic presentation.">
             </a>
             <div class="caption">Raspbot and another bot at an academic presentation. (2019)</div>
-        </div>
-        <div class="gallery">
-            <a target="_blank" href="/projects/raspbot/gallery/tag.jpg">
-                <img src="/projects/raspbot/gallery/tag.jpg" alt="Raspbot's tag">
-            </a>
-            <div class="caption">Raspbot's tag. (2019)</div>
         </div>
         <div class="gallery">
             <a target="_blank" href="/projects/raspbot/gallery/early-proto-build.jpg">
