--- a/html/siteblog.html
+++ b/html/siteblog.html
@@ -97,6 +97,16 @@
                     <p>This update also included other misc. minor changes.</p>
                 </div>
                 <div class = "card">
+                    <h2>Update 1.11h</h2>
+                    <p>Project Update, January 11th, 2021</p>
+                    <h3>Raspbot</h3>
+                    <p>Refactoring and debugging client application.</p>
+                    <p>OpenCV is failing to build, with cmake raising errors. Currently resolving dependencies before application testing can begin.</p>
+                    <p>Project gallery has been updated with screenshots of the client application, visit homepage, under Raspbot see Project Contents and below Gallery.</p>
+                    <h3>Lexicon Cognito</h3>
+                    <p>Divided upload process across multiple pages, for users to select authors, publishers, tags, and distributors. Writing pages and logic for endpoints.</p>
+                </div>
+                <div class = "card">
                     <h2>Update 1.11g</h2>
                     <p>Project Update, January 5th, 2021</p>
                     <h3>Raspbot</h3>
